# SexlabArousedNG

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  SMOKE_TESTS.md  loverslab-description.md  mkdocs.yml  nexus-description.md  nexuslink.txt  skyrimse.ppj
.github/workflows/: docs.yml
docs/: KID_Reference.md  UserGuide.md  index.md
docs/authors/: building.md  compatibility.md  cpp-api.md  dynamic-effects.md  native-api.md  overview.md  papyrus-api.md  static-effects.md
docs/players/: armor-curation.md  getting-started.md  how-arousal-works.md  kid-export.md  mcm-reference.md  requirements.md  troubleshooting.md  tuning-recipes.md
include/: ArousalAPI.h  ArousalData.h  ArousalManager.h  CosSin.h
src/: ArousalAPI.cpp  ArousalData.cpp  ArousalManager.cpp  Main.cpp  Papyrus.cpp  SerializationHelper.cpp
